	+ removed MOOT_USE_TRIGRAMS macro sensitivity
	  - the macro remains defined for now, for compatibility
	  - old !defined(MOOT_USE_TRIGRAMS) behavior now requires just a model tweak
	+ removed MOOT_RELAX macro sensitivity
	  - the macro remains defined for now, for compatibility
	  - relaxation behavior is now controlled by mootHMM::relax flag

v2.0.6 Mon, 07 Sep 2009 16:18:54 +0200
	+ changed signature mootHMM::wordp(tokstr,tagstr)
	  - WAS: mootHMM::wordp(const mootTokString  tokstr, const mootTagString  tagstr)
	  -  IS: mootHMM::wordp(const mootTokString &tokstr, const mootTagString &tagstr)
	+ ditto for mootHMM::classp(lclass,tagstr)
	+ added /{newline} suffix check in mootNgramsLexer
	  - otherwise all-numeric "tags" are interpreted as COUNTs, breaking mootHMM::compile()
	+ added mootEnum::get_id()
	+ re-implemented MOOT_HASH_TRIGRAMS compile-time option as runtime (bool mootHMM::hash_ngrams)
	  - now applies to all n-grams (uni-, bi-, and trigrams), not just trigrams
	  - reduces throughput by ca. 50%, but results seem compatible
	+ added checking for system 'osfcn.h' (flex++/bison++ hack)
        + added mootToken::Location (token.tok_location) nested class for input stream back-tracing
	  - pass-through now working in mootPPLexer, mootpp, Token(Reader|Writer)(Native|Expat)
	  - otherwise implicitly set by TokenReader(Native|Expat) if pass-through format flag tiofLocation is unset
	+ added byte_number() methods to TokenReaderNative
	+ fixed double line-counting bug in mootTokenLexer.ll in presence of tags
	+ added byte-counting code to mootTokenLexer.ll (the template really ought to do this for us)
	+ fixed vprintf() bug in mootCxxIO.h, mootBufferIO.h causing garbage out
	  on first printf() call (va_list was being incremented by vsnprintf() but not backed up)
	  - solution uses macro moot_va_copy(), lifted from glibc docs: use __va_copy if present,
	    otherwise simple assignment
	+ basic tests (incl. binary models) on x86_64 (lal.bbaw.de): looks good