@@ -1,0 +1,48 @@
+/* -*- Mode: C++ -*- */
+
+/*
+   libmoot : moocow's part-of-speech tagging library
+   Copyright (C) 2003-2009 by Bryan Jurish <moocow@ling.uni-potsdam.de>
+
+   This library is free software; you can redistribute it and/or
+   modify it under the terms of the GNU Lesser General Public
+   License as published by the Free Software Foundation; either
+   version 2.1 of the License, or (at your option) any later version.
+   
+   This library is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   Lesser General Public License for more details.
+   
+   You should have received a copy of the GNU Lesser General Public
+   License along with this library; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+*/
+
+
+/*--------------------------------------------------------------------------
+ * File: mootDynHMM.cc
+ * Author: Bryan Jurish <moocow@ling.uni-potsdam.de>
+ * Description:
+ *   + moot PoS tagger : 1st-order HMM tagger/disambiguator : guts
+ *--------------------------------------------------------------------------*/
+
+#ifdef HAVE_CONFIG_H
+# include <mootConfig.h>
+#endif
+
+#include <mootDynHMM.h>
+#include <mootTokenIO.h>
+#include <mootCIO.h>
+#include <mootZIO.h>
+#include <mootBinIO.h>
+#include <mootUtils.h>
+
+using namespace std;
+using namespace mootBinIO;
+using namespace mootio;
+
+//-- test
+void __testme__(void) {
+  mootDynHMM<LPFUniform> hmmu;
+}
